# raspberry-pi-binary-clock

./: CMakeLists.txt  ClockFrame.cpp  ClockFrame.h  ClockGrid.cpp  ClockGrid.h  ClockPixel.cpp  ClockPixel.h  MainWindow.cpp  MainWindow.h  Readme.md  clock.desktop  main.cpp
